EXTRA_DIST = \
  AboutDialog.java \
  AlCoDialog.java \
  AlgoAndConv.java \
  Atom.java \
  AtomEditor.java \
  DisplayerJDialog.java \
  GeomDialog.java \
  Geometry.java \
  InOuDialog.java \
  InputOutput.java \
  LocalExec.java \
  MainFrame.java \
  MendTabDialog.java \
  MyLogger.java \
  MyTableModel.java \
  MyUserInfo.java \
  ReReDialog.java \
  RealRecip.java \
  RemoteExec.java \
  RetMSG.java \
  SFTP.java \
  SSH.java \
  SSHTunnel.java \
  TheoDialog.java \
  Theory.java \
  Utils.java \
  VarsHelp.java \
  WaDeDialog.java \
  WavefuncDens.java \
  XMLConfigReader.java \
  XMLConfigWriter.java \
  pspAtomRenderer.java \
  znuclAtomRenderer.java
