DIST_SUBDIRS = adapters filter input output transform

EXTRA_DIST = \
  Attribute.java \
  AttributeList.java \
  CDATA.java \
  Comment.java \
  Content.java \
  ContentList.java \
  DataConversionException.java \
  DefaultJDOMFactory.java \
  DescendantIterator.java \
  DocType.java \
  Document.java \
  Element.java \
  EntityRef.java \
  FilterIterator.java \
  IllegalAddException.java \
  IllegalDataException.java \
  IllegalNameException.java \
  IllegalTargetException.java \
  JDOMException.java \
  JDOMFactory.java \
  Namespace.java \
  NamespaceKey.java \
  Parent.java \
  ProcessingInstruction.java \
  Text.java \
  UncheckedJDOMFactory.java \
  Verifier.java
