EXTRA_DIST = \
  Buffer.java \
  Channel.java \
  ChannelAgentForwarding.java \
  ChannelDirectTCPIP.java \
  ChannelExec.java \
  ChannelForwardedTCPIP.java \
  ChannelSession.java \
  ChannelSftp.java \
  ChannelShell.java \
  ChannelSubsystem.java \
  ChannelX11.java \
  Cipher.java \
  CipherNone.java \
  Compression.java \
  DH.java \
  DHG1.java \
  DHGEX.java \
  ForwardedTCPIPDaemon.java \
  GSSContext.java \
  HASH.java \
  HostKey.java \
  HostKeyRepository.java \
  IO.java \
  Identity.java \
  IdentityFile.java \
  JSch.java \
  JSchAuthCancelException.java \
  JSchException.java \
  JSchPartialAuthException.java \
  KeyExchange.java \
  KeyPair.java \
  KeyPairDSA.java \
  KeyPairGenDSA.java \
  KeyPairGenRSA.java \
  KeyPairRSA.java \
  KnownHosts.java \
  Logger.java \
  MAC.java \
  Packet.java \
  PortWatcher.java \
  Proxy.java \
  ProxyHTTP.java \
  ProxySOCKS4.java \
  ProxySOCKS5.java \
  Random.java \
  Request.java \
  RequestAgentForwarding.java \
  RequestEnv.java \
  RequestExec.java \
  RequestPtyReq.java \
  RequestSftp.java \
  RequestShell.java \
  RequestSignal.java \
  RequestSubsystem.java \
  RequestWindowChange.java \
  RequestX11.java \
  ServerSocketFactory.java \
  Session.java \
  SftpATTRS.java \
  SftpException.java \
  SftpProgressMonitor.java \
  SignatureDSA.java \
  SignatureRSA.java \
  SocketFactory.java \
  UIKeyboardInteractive.java \
  UserAuth.java \
  UserAuthGSSAPIWithMIC.java \
  UserAuthKeyboardInteractive.java \
  UserAuthNone.java \
  UserAuthPassword.java \
  UserAuthPublicKey.java \
  UserInfo.java \
  Util.java
